<resources>
    <string name="app_name">EpiAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="login_placeholder">Login</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Log In</string>

    <string name="wrong_creditentials">Wrong Login/Password combination</string>
    <string name="not_connected">No network available</string>
    <string name="app_error">Error in the application</string>

    <string name="epitech_api_url">http://epitech-api.herokuapp.com</string>
    <string name="api_login_url">/login</string>
    <string name="api_messages_url">/messages</string>
    <string name="api_alerts_url">/alerts</string>
    <string name="api_user_url">/user</string>
    <string name="api_planning_url">/planning</string>
    <string name="api_eventregister_url">/event</string>
    <string name="api_validatetoken_url">/token</string>
    <string name="api_grades_url">/marks</string>
    <string name="api_allmodules_url">/allmodules</string>
    <string name="api_module_url">/module</string>

    <string name="checkboxregistered_hint">Only Registered activities</string>
    <string name="checkboxmodules_hint">Only Modules activities</string>

    <string name="modules_checkboxregistered">Only registered modules</string>

    <string name="modulesprev_text">Previous</string>
    <string name="modulesnext_text">Next</string>
    <string name="modules_start">Start registration</string>
    <string name="modules_end">End registration</string>

    <string name="moduleregister_text">Register</string>
    <string name="moduleunregister_text">Unregister</string>
    <string name="moduleexpand_text">Expand</string>
    <string name="modulecollapse_text">Hide</string>
    <string name="modulegrade_hint">GRADE</string>
    <string name="module_semesterhint">Semester</string>
    <string name="module_descriptionhint">DESCRIPTION</string>
    <string name="module_competencehint">COMPETENCES</string>
    <string name="module_scolaryearhint">Scolar Year</string>

    <string name="grade_corrector">Corrector</string>
    <string name="grade_modulehint">Module</string>
    <string name="grade_markhint">Mark</string>
    <string name="grade_datehint">Date</string>

    <string name="planning_nextday">Next day</string>
    <string name="planning_prevday">Previous day</string>
    <string name="planning_pickday">Select day</string>

    <string name="project_checkboxregistered_hint">Only Registered Projects</string>
    <string name="title_project">Projects</string>
    <string name="api_projects_url">/projects</string>
    <string name="api_projectregister_url">/project</string>

    <string name="welcome_creditshint">Crédits</string>
    <string name="welcome_gpahint">GPA</string>
    <string name="welcome_loghint">LogTime</string>

</resources>
