<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/module_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/modules_scolaryear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_semesterhint"/>

        <TextView android:id="@+id/module_semester"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Credits"/>

        <TextView android:id="@+id/module_credits"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button android:id="@+id/module_expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moduleexpand_text"/>

    <Button android:id="@+id/module_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moduleregister_text"/>

    <Button android:id="@+id/module_unregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moduleunregister_text"/>

</LinearLayout>
